plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.app.preorder'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
    main.java.srcDirs += querydslDir
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.apache.commons:commons-lang3:3.13.0'
    implementation 'org.springframework.kafka:spring-kafka'

    implementation 'org.mariadb.jdbc:mariadb-java-client'

    //  infra-lib
    implementation project(':infra-lib')

    //  common-lib
    implementation project(':common-lib')

    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootJar') {
    bootJar ->
        bootJar.mainClass.set('com.app.preorder.productservice.ProductServiceApplication')
        bootJar.archiveFileName = 'app.jar'
}

tasks.named('jar') {
    enabled = false
}